# doris

./: LICENSE  README.md  build.py  pyproject.toml  requirements.txt
.github/workflows/: build-exec.yml  build.yml
app/: config.py  doris.py  journal.py  notes.py  search.py
doris/: __main__.py  config.py  journal.py  notes.py  search.py
doris.dist-info/: METADATA
